--- a/frontend/src/pages/interactions/components/templates/InteractionTemplates.module.scss
+++ b/frontend/src/pages/interactions/components/templates/InteractionTemplates.module.scss
@@ -14,7 +14,6 @@
     display: flex;
     flex-direction: column;
     row-gap: $spacing-base;
-    height: 500px;
     overflow-y: scroll;
     @include styledScrollbars();
     .item {
